--- a/RaiMoon/Info.plist
+++ b/RaiMoon/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 Daniel Tatom. All rights reserved.</string>
+	<string>Copyright © 2017 Danny Tatom. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
